// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`value is 0 1`] = `
<div>
  <div
    className="text-sm mb-1"
  >
    0
    %
  </div>
  <div
    className="relative min-w-[100px]"
  >
    <div
      className="bg-gray-300 h-[4px] w-full"
    />
    <div
      className="absolute top-0 left-0 h-[4px] flex justify-end items-center bg-gray-300 w-[0%]"
    >
      <span
        aria-hidden="true"
        className="bg-teal-700 flex-shrink-0 inline-block h-2 w-2 rounded-full "
      />
    </div>
  </div>
</div>
`;

exports[`value is 50 1`] = `
<div>
  <div
    className="text-sm mb-1"
  >
    50
    %
  </div>
  <div
    className="relative min-w-[100px]"
  >
    <div
      className="bg-gray-300 h-[4px] w-full"
    />
    <div
      className="absolute top-0 left-0 h-[4px] flex justify-end items-center bg-teal-700 w-[50%]"
    >
      <span
        aria-hidden="true"
        className="bg-teal-700 flex-shrink-0 inline-block h-2 w-2 rounded-full -mr-1 "
      />
    </div>
  </div>
</div>
`;

exports[`value is 100 1`] = `
<div>
  <div
    className="text-sm mb-1"
  >
    50
    %
  </div>
  <div
    className="relative min-w-[100px]"
  >
    <div
      className="bg-gray-300 h-[4px] w-full"
    />
    <div
      className="absolute top-0 left-0 h-[4px] flex justify-end items-center bg-teal-700 w-[50%]"
    >
      <span
        aria-hidden="true"
        className="bg-teal-700 flex-shrink-0 inline-block h-2 w-2 rounded-full -mr-1 "
      />
    </div>
  </div>
</div>
`;
